user ratting book

--- a/app/assets/stylesheets/color.scss
+++ b/app/assets/stylesheets/color.scss
@@ -19,3 +19,4 @@ $mercury: #e5e5e5;
 $color_teal_approx: #00897b;
 $black_19: rgba(0,0,0,0.19);
 $black_23: rgba(0,0,0,0.23);
+$color_supernova_approx: #ffca00;
