--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -4,6 +4,6 @@
   setTimeout(function(){ 
     $('#commentBox').html('<%= j render(partial: 'comments/comment', collection: @comments) %>');
     $('#commentPage').html('<%= j paginate(@comments, theme: 'twitter-bootstrap-4',pagination_class: 
-    'pagination-md float-right', remote: true) %><div class='clearfix'></div>')}, 
+    'pagination-md float-right', remote: true) %><div class=\'clearfix\'></div>')}, 
   200);
 <% end %>
