--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -4,7 +4,7 @@
   </div>
   <div class="form-group">
     <div class="text-right">
-      <%= f.submit "Send", class: "btn btn-md btn-primary "%>
+      <%= f.submit t(".send"), class: "btn btn-md btn-primary "%>
     </div>
   </div>         
 <% end %>
