--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -44,8 +44,11 @@
   <div class="row justify-content-center">
     <div class="col-md-12">
       <div class="text-left">
+      
         <p class="title-list">
           <%= t ".just_add" %>
+        <span class="float-right"><a href="/books?q%5Bs%5D=created_at%20asc">Load More</a></span>
+        <div class="clearfix"></div>
         </p>
         <hr>
        <div class="row justify-content-center">
