admin manager requirement book

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -77,7 +77,7 @@
               </div>
               <div id="collapseAdvancedSearch" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
                 <div class="card-body content-silderbar" id="filteAdvancedSearch">
-                  <%= render(partial: "books/advanced_search") %>
+                  <%= render partial: "books/advanced_search" %>
                 </div>
               </div>
             </div>
